fix a nasty card layout bug on ie11 using a solution from https://github.com/twbs/bootstrap/issues/21885#issuecomment-434760204

--- a/_css/_thumbnails.scss
+++ b/_css/_thumbnails.scss
@@ -87,3 +87,9 @@ $title-height: 42px;
   background: $grey-600;
 }
 */
+
+/* ugly card fix for ie11 */
+.card>.card-img-top, .card>.card-img-top-wrap {
+  max-width: 100%;
+  flex-shrink: 0;
+}
